--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -10,6 +10,10 @@ api:
 test:
   basepath: "/api/contact"
 
+messages:
+  # Batch processing
+  batch-primaryidentifier-notpresent: "There are some primary identifiers not present in the datastore"
+
 # Components to configure:
 # - Salesforce connector
 # - TLS connector
