--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
 	<parent>
 		<groupId>176302a0-a94d-44e9-a517-9e6dc9548d0d</groupId>
-		<artifactId>common-pom</artifactId>
-		<version>1.0.17</version>
+		<artifactId>bcrm-pom</artifactId>
+		<version>1.1.4</version>
 		<relativePath/>
 	</parent>
 
 	<groupId>176302a0-a94d-44e9-a517-9e6dc9548d0d</groupId>
 	<artifactId>bcrm-salesforce-sapi-asset</artifactId>
-	<version>1.0.85</version> 
+	<version>1.0.86</version> 
 	<packaging>mule-application</packaging>
 
 	<name>bcrm-salesforce-sapi</name>
@@ -42,11 +42,11 @@
 			<type>zip</type> 
 		</dependency>
 
-		<!-- Common Assets -->
+		<!-- Common configurations -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>common-btfacore</artifactId>
-			<version>1.0.21</version>
+			<artifactId>bcrm-core</artifactId>
+			<version>1.1.1</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 
