--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <!-- Code can be rolled back to remove payment 1.0.99 full working payment code on 1.0.122-->
 	<groupId>176302a0-a94d-44e9-a517-9e6dc9548d0d</groupId>
 	<artifactId>bcrm-salesforce-sapi-asset</artifactId>
-	<version>1.0.144</version> 
+	<version>1.0.145</version> 
 	<packaging>mule-application</packaging>
 
 	<name>bcrm-salesforce-sapi</name>
@@ -48,6 +48,12 @@
 			<artifactId>bcrm-core</artifactId>
 			<version>1.1.6</version>
 			<classifier>mule-plugin</classifier>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.bouncycastle</groupId>
+   			<artifactId>bc-fips</artifactId>
+    		<version>2.1.1</version>
 		</dependency>
 
 		<!-- Salesforce connector -->
